Add Senna.js to the documentation, docs feel smoother

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -7,17 +7,12 @@
 	<link rel="stylesheet" href="{{rootPath}}/assets/main.css">
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.4.0/styles/default.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/senna.js/2.0.4/senna.css" />
+
+	<!-- Senna is included here so it is loaded before the page loads. -->
+	<script src="https://cdn.jsdelivr.net/senna.js/2.0.4/senna-min.js"></script>
 </head>
-<body>
-	<!-- Google Tag Manager -->
-	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MLJ76N"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-MLJ76N');</script>
-	<!-- End Google Tag Manager -->
+<body data-senna>
 	<div class="header">
 		{{> header}}
 	</div>
@@ -25,7 +20,7 @@
 		<div class="sidebar">
 			{{> sidebar }}
 		</div>
-		<div class="content">
+		<div id="content" class="content" data-senna-surface>
 			<article>
 				<header>
 					<a href="{{githubPath}}">Edit on GitHub</a>
@@ -34,6 +29,8 @@
 			</article>
 		</div>
 	</div>
+
+	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="{{rootPath}}/assets/main.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
@@ -44,5 +41,15 @@
 			inputSelector: '#search'
 		});
 	</script>
+
+	<!-- Google Tag Manager -->
+	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MLJ76N"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-MLJ76N');</script>
+	<!-- End Google Tag Manager -->
 </body>
 </html>
