--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.4.0/styles/default.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/senna.js/2.0.4/senna.css" />
+	<base href="" />
 
 	<!-- Senna is included here so it is loaded before the page loads. -->
 	<script src="https://cdn.jsdelivr.net/senna.js/2.0.4/senna-min.js"></script>
@@ -21,6 +22,12 @@
 			{{> sidebar }}
 		</div>
 		<div id="content" class="content" data-senna-surface>
+			<script>
+				if (typeof _registerAnchorClick === 'function') {
+					_registerAnchorClick();
+				}
+			</script>
+			
 			<article>
 				<header>
 					<a href="{{githubPath}}">Edit on GitHub</a>
