Add the missing level-5 style...

--- a/layouts/styles/main.less
+++ b/layouts/styles/main.less
@@ -252,6 +252,10 @@ hr {
 					padding-left: 60px;
 				}
 
+				&.level-5 {
+					padding-left: 70px;
+				}
+
 				&.level-6 {
 					padding-left: 80px;
 				}
