Change root path

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>{{ title }}</title>
 	<meta name="description" content="{{ description }}">
-	<link rel="stylesheet" href="{{rootPath}}/assets/main.css">
+	<link rel="stylesheet" href="{{rootPath}}assets/main.css">
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.4.0/styles/default.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/senna.js/2.0.4/senna.css" />
@@ -32,7 +32,7 @@
 
 	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="{{rootPath}}/assets/main.js"></script>
+	<script type="text/javascript" src="{{rootPath}}assets/main.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
 	<script type="text/javascript">
 		docsearch({
