--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-item brand">
 	<!-- <button class="menu-button"><i class="fa fa-bars"></i></button> -->
 	<a class="title" href="https://rocket.chat">
-		<img class="logo" src="{{rootPath}}/assets/logo.png"> Rocket.Chat
+		<img class="logo" src="{{rootPath}}assets/logo.png"> Rocket.Chat
 	</a>
 </div>
 <div class="navigation">
