Add canonical tag

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
 	<a class="nav-link" href="https://rocket.chat/download/">Download</a>
 	<a class="nav-link" href="https://rocket.chat/cloud/">Cloud</a>
 	<a class="nav-link" href="https://rocket.chat/community/">Community</a>
-	<a class="nav-link active" href="https://docs.rocket.chat">Docs</a>
+	<a class="nav-link active" href="https://rocket.chat/docs/">Docs</a>
 	<a class="nav-link" href="https://rocket.chat/blog/">Blog</a>
 	<a class="nav-link" href="https://rocket.chat/contact/">Contact</a>
 	<div class="search">
