--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -11,6 +11,12 @@
 
 	<!-- Senna is included here so it is loaded before the page loads. -->
 	<script src="https://cdn.jsdelivr.net/senna.js/2.0.4/senna-min.js"></script>
+
+	<link rel="canonical" href="https://rocket.chat/docs{{path}}" />
+
+	{{#if canonical}}
+		<link rel="canonical" href="https://rocket.chat/docs{{canonical}}" />
+	{{/if}}
 </head>
 <body>
 	<div class="header">
