Only one canonical link

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -12,10 +12,10 @@
 	<!-- Senna is included here so it is loaded before the page loads. -->
 	<script src="https://cdn.jsdelivr.net/senna.js/2.0.4/senna-min.js"></script>
 
-	<link rel="canonical" href="https://rocket.chat/docs{{path}}" />
-
 	{{#if canonical}}
 		<link rel="canonical" href="https://rocket.chat/docs{{canonical}}" />
+	{{else}}
+		<link rel="canonical" href="https://rocket.chat/docs{{path}}" />
 	{{/if}}
 </head>
 <body>
